tests/baselines/reference/classExtendsClauseClassNotReferringConstructor.errors.txt
classExtendsClauseClassNotReferringConstructor.ts(2,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
classExtendsClauseClassNotReferringConstructor.ts(4,21): error TS2507: Type 'number' is not a constructor function type.


==== classExtendsClauseClassNotReferringConstructor.ts (2 errors) ====
    class A { a: number; }
    module Foo {
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        var A = 1;
        class B extends A { b: string; }
                        ~
!!! error TS2507: Type 'number' is not a constructor function type.
    }
    